--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@ canvas {
   <p>!Join me in celebrating my 20th birthday </p>
 
   <div class="details">
-    <p> 15 / 02 / 2026</p>
-    <p> 6:00 PM</p>
+    <p>13/02/2026</p>
+    <p> 6:00PM</p>
     <p> </p>
   </div>
 
   <h3> Countdown</h3>
   <div class="countdown">
-    <div><span id="days">0</span>DAY</div>
-    <div><span id="hours">0</span>HOUR</div>
-    <div><span id="minutes">0</span>MINUTE</div>
-    <div><span id="seconds">0</span>SECOND</div>
+    <div><span id="days">0</span>DAYS</div>
+    <div><span id="hours">0</span>HOURS</div>
+    <div><span id="minutes">0</span>MINUTES</div>
+    <div><span id="seconds">0</span>SECONDS</div>
   </div>
 
   <div class="buttons">
@@ -198,3 +198,4 @@ function drawBalloons(){
 
 </body>
 </html>
+
